# openai-templates

./: main.py  pyproject.toml  readme.md
chat/: chat.py
config/: config.py  model_config.py
tests/: config_test.py  test_model_config.py
