[project]
name = "openai-templates"
version = "0.1.0"
description = ""
authors = [
    {name = "fahlevi20",email = "rozakalfi@gmal.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.63.0,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]
[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
